# Factory

./: README.md
basic-factory/: CMakeLists.txt  Factory.cpp  Factory.h  IObject.h  Toy.cpp  Toy.h  Wrap.cpp  Wrap.h  main.cpp
basic-factory/Toys/: Car.cpp  Car.h  Plane.cpp  Plane.h
basic-factory/Wraps/: Box.cpp  Box.h  Paper.cpp  Paper.h
